1.2.7 (2019-05-14)
------------------

- Revert changes introduced in #106 (see #105)
- Refactor tests

1.2.6 (2019-05-10) - DELETED
------------------

- Use same resampling method for mask and for data (#105)


1.2.5 (2019-05-08)
------------------

- add tile_edge_padding option to be passed to rio_tiler.utils._tile_read to reduce sharp edges that occur due to resampling (#104)

1.2.4 (2019-04-16)
------------------

- add histogram_range options to be passed to rio_tiler.{module}.metadata function (#102)

1.2.3 (2019-04-04)
------------------

- add histogram_bins options to be passed to rio_tiler.{module}.metadata function (#98)

Bug fixes:

- return index number with band descriptions (#99)

1.2.2 (2019-04-03)
------------------

- add mercator min/max zoom info in metadata output from rio_tiler.utils.raster_get_stats (#96)
- add band description (band name) in metadata output from rio_tiler.utils.raster_get_stats (#96)

1.2.1 (2019-03-26)
------------------

- Replace rio-pansharpen dependency with a fork of the brovey function directly
into `rio_tiler.utils` (rio-pansharpen is unmaintened and not compatible with 
rasterio>=1) (#94).

1.2.0 (2019-03-26)
------------------

- `rio_tiler.utils.array_to_image`'s color_map arg can be a dictionary of discrete values (#91)

Breacking Changes:

- `expr` argument is now a required option in `rio_tiler.utils.expression`. (#88)

1.1.4 (2019-03-11)
------------------
- Add 'rplumbo' colormap (#90 by @DanSchoppe)

1.1.3 (2019-03-06)
------------------

Bug fixes:

- Fix casting to integer for MAX_THREADS environment variable.

1.1.1 (2019-02-21)
------------------
- Minor typo correction and harmonization of the use of src/src_dst/src_path in `rio_tiler.utils`

Bug fixes:

- Fix nodata handling in `utils.raster_get_stats`

1.1.0 (2019-02-15)
------------------

- Allow options forwarding to `tile_read` from `main.tile` function (#86)
- Add `resampling_method` options in `rio_tiler.utils.tile_read` to allow user set